added swagger and openapi but it is not work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ database.driver=org.postgresql.Driver
 database.url=jdbc:postgresql://localhost:5432/todotask
 database.username=pavel
 database.password=pavel
+
+openapi.application-description=test
+openapi.application-version=v1
