added dependency spring-boot for work openapi3 and some settings for swagger. now it works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ database.url=jdbc:postgresql://localhost:5432/todotask
 database.username=pavel
 database.password=pavel
 
-openapi.application-description=test
+openapi.application-description=API documentation for todotask project
 openapi.application-version=v1
