--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>2.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
