added secret key for tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ database.password=pavel
 
 openapi.application-description=API documentation for todotask project
 openapi.application-version=v1
+
+secret-key=eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJKb2UifQ.1KP0SsvENi7Uz1oQc07aXTL7k
