change dockerfile on multi-stage dockerfile and upgrade docker-compose version to 3.4 for add target in build

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,9 +1,10 @@
-version: '3.3'
+version: '3.4'
 services:
   todotask:
     container_name: todotask
     build:
       context: .
+      target: development
     ports:
       - 8000:8000
       - 8080:8080
