fixed problem compile

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,7 +17,7 @@ services:
       - postgresqlserver
     volumes:
       - ./:/app
-    command: mvn cargo:run -Drun.jvmArguments="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000"
+    command: mvn package cargo:run -Drun.jvmArguments="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000"
 
   postgresqlserver:
     container_name: postgresql
